--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@astrojs/netlify": "^0.1.0",
     "@astrojs/tailwind": "^0.1.0",
     "astro": "^1.0.0-beta.0"
   }
