--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "devDependencies": {
     "@astrojs/netlify": "^0.1.0",
+    "@astrojs/svelte": "^0.0.2",
     "@astrojs/tailwind": "^0.1.0",
-    "astro": "^1.0.0-beta.0"
+    "astro": "^1.0.0-beta.0",
+    "svelte": "^3.46.4"
   }
 }
